--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
   --white: hsl(0, 0%, 95%);
   --grey: hsl(0, 0%, 75%);
-  --blue: hsl(240, 45%, 15%);
-  --lightblue: hsl(240, 54%, 49%);
-  --black: hsl(240, 86%, 6%);
+  --lightblue: hsl(240, 60%, 70%);
+  --blue: hsl(240, 60%, 30%);
+  --black: hsl(240, 60%, 5%);
 }
 
 html {
@@ -29,12 +29,12 @@ body {
   width: 13rem;
   display: grid;
   border-radius: 10px;
-  background: var(--white);
-  box-shadow: 3px 3px 5px var(--black), inset -1px -1px 2px var(--lightblue);
+  background: var(--lightblue);
+  box-shadow: 2px 2px 10px var(--black), inset -2px -2px 10px var(--lightblue);
 }
 
 .calculator__display {
-  background-color: var(--blue);
+  background-color: var(--black);
   color: var(--white);
   border-radius: 10px 10px 2px 2px;
   padding: 0.5rem;
@@ -58,11 +58,10 @@ body {
 }
 
 .button {
-  color: var(--blue);
+  color: var(--black);
   border-radius: 0.5rem;
-  background: var(--white);
-  box-shadow: inset 2px 2px 5px var(--lightblue),
-    inset -2px -2px 30px var(--white);
+  background: var(--lightblue);
+  box-shadow: inset 2px 2px 2px var(--white), 2px 2px 5px var(--blue);
   border: none;
   text-align: center;
   width: 60px;
