--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   --white: hsl(0, 0%, 95%);
   --grey: hsl(0, 0%, 75%);
   --lightblue: hsl(240, 60%, 70%);
-  --blue: hsl(240, 60%, 30%);
+  --mediumblue: hsl(240, 58%, 67%);
+  --blue: hsl(240, 60%, 50%);
   --black: hsl(240, 60%, 5%);
 }
 
@@ -41,7 +42,7 @@ body {
   text-align: right;
   font-size: calc(1rem * 1.5);
 
-  .display-history {
+  .display-input {
     font-size: 0.65rem;
     color: var(--grey);
     padding-right: 0.25em;
@@ -67,4 +68,11 @@ body {
   text-align: center;
   width: 60px;
   font-weight: 700;
+  transition: all 350ms;
+}
+
+[data-active='highlighted'] {
+  background: var(--mediumblue);
+  color: var(--blue);
+  box-shadow: inset 2px 2px 2px var(--blue), 2px 2px 5px var(--white);
 }
