--- a/style.css
+++ b/style.css
@@ -48,6 +48,12 @@ body {
     padding-right: 0.25em;
     height: 1rem;
   }
+
+  .display-output {
+    padding-right: 0.25em;
+    height: 1.5rem;
+    margin-top: 0.5rem;
+  }
 }
 
 .calculator__keys {
