--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --mediumblue: hsl(240, 58%, 67%);
   --blue: hsl(240, 60%, 50%);
   --black: hsl(240, 60%, 5%);
+  --red: hsl(0, 68%, 42%);
 }
 
 html {
@@ -75,6 +76,10 @@ body {
   width: 60px;
   font-weight: 700;
   transition: all 350ms;
+
+  &:not([data-type='operator']):active {
+    background-color: var(--red);
+  }
 }
 
 [data-type='equal'] {
