--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
   padding: 0.5rem;
   text-align: right;
   font-size: calc(1rem * 1.5);
+  position: relative;
 
   .display-input {
     font-size: 0.65rem;
@@ -59,9 +60,8 @@ body {
 
 .calculator__keys {
   display: grid;
-  place-content: center space-evenly;
   grid-template-columns: repeat(4, auto);
-  grid-template-rows: repeat(5, 40px);
+  grid-template-rows: repeat(6, 40px);
   gap: 0.5rem;
   margin: 2rem 0.5rem 1.5rem;
 }
@@ -73,7 +73,6 @@ body {
   box-shadow: inset 2px 2px 2px var(--white), 2px 2px 5px var(--blue);
   border: none;
   text-align: center;
-  width: 60px;
   font-weight: 700;
   transition: all 350ms;
 
@@ -85,10 +84,26 @@ body {
 [data-type='equal'] {
   background: rgb(223, 154, 25);
   box-shadow: inset 2px 2px 2px var(--white), 2px 2px 5px var(--blue);
+  grid-column: 3 / span 2;
 }
 
 [data-active='highlighted'] {
   background: var(--mediumblue);
   color: var(--blue);
   box-shadow: inset 2px 2px 2px var(--blue), inset -2px -2px 5px var(--white);
+}
+
+.memory__container {
+  position: absolute;
+  font-size: 1rem;
+  color: var(--lightblue);
+  opacity: 0.25;
+  bottom: 0;
+  left: 0;
+  padding: 0.25rem;
+}
+
+.active {
+  opacity: 1;
+  color: var(--red);
 }
