--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
   --blue: hsl(240, 60%, 50%);
   --black: hsl(240, 60%, 5%);
   --red: hsl(0, 68%, 42%);
+  --yellow: hsl(56, 95%, 38%);
+  --orange: hsl(20, 65%, 40%);
 }
 
 html {
@@ -16,11 +18,7 @@ html {
 }
 
 body {
-  background-image: linear-gradient(
-    236deg,
-    hsla(20, 60%, 64%, 50%),
-    hsla(56, 42%, 62%, 50%)
-  );
+  background-image: linear-gradient(236deg, var(--orange), var(--yellow));
   display: flex;
   justify-content: center;
   align-items: center;
