Refactor variable names
Index.html: rename display-input to previous-input and display-output to current-input
Style.css: refactor css selectors per new names
App.js: rename inputDisplay to previousInput and outputDisplay to currentInput
    rename inputDisplayValue to previousOperand and outputDisplayValue to currentOperand

--- a/style.css
+++ b/style.css
@@ -42,15 +42,14 @@ body {
   font-size: calc(1rem * 1.5);
   position: relative;
 
-  .display-input {
+  .previous-input {
     font-size: 0.65rem;
     color: var(--grey);
     padding-right: 0.25em;
     height: 1rem;
-    max-width: 14ch;
   }
 
-  .display-output {
+  .current-input {
     padding-right: 0.25em;
     height: 1.5rem;
     margin-top: 0.5rem;
