--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   --blue: hsl(240, 60%, 50%);
   --black: hsl(240, 60%, 5%);
   --red: hsl(0, 68%, 42%);
-  --yellow: hsl(56, 95%, 38%);
+  --yellow: hsl(56, 95%, 60%);
   --orange: hsl(20, 65%, 40%);
 }
 
@@ -28,32 +28,38 @@ body {
 .wrapper {
   width: 13rem;
   display: grid;
-  border-radius: 10px;
+  border-radius: 5px;
   background: var(--lightblue);
   box-shadow: 2px 2px 10px var(--black), inset -2px -2px 10px var(--lightblue);
 }
 
 .calculator__display {
   background-color: var(--black);
-  color: var(--white);
-  border-radius: 10px 10px 2px 2px;
+  border-radius: 5px 5px 2px 2px;
   padding: 0.5rem;
-  text-align: right;
-  font-size: calc(1rem * 1.5);
   position: relative;
+  font-family: monospace;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 
   .previous-input {
-    font-size: 0.65rem;
-    color: var(--grey);
-    padding-right: 0.25em;
-    height: 1rem;
+    text-align: right;
+    font-size: 0.75rem;
+    color: var(--yellow);
+    height: 2rem;
+    max-width: 28ch;
   }
 
   .current-input {
-    padding-right: 0.25em;
-    height: 1.5rem;
-    margin-top: 0.5rem;
+    color: var(--white);
+    text-align: right;
+    font-size: calc(1rem * 1.5);
+    height: 3.25rem;
+    margin-left: 15px;
     max-width: 14ch;
+    word-wrap: break-word;
+    word-break: break-all;
   }
 }
 
@@ -62,7 +68,7 @@ body {
   grid-template-columns: repeat(4, auto);
   grid-template-rows: repeat(6, 40px);
   gap: 0.5rem;
-  margin: 2rem 0.5rem 1.5rem;
+  margin: 1.25rem 0.5rem 1.5rem;
 }
 
 .button {
