--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --white: hsl(0, 0%, 95%);
   --grey: hsl(0, 0%, 75%);
-  --lightblue: hsl(240, 60%, 70%);
+  --lightblue: hsl(240, 59%, 70%);
   --mediumblue: hsl(240, 58%, 67%);
   --blue: hsl(240, 60%, 50%);
   --black: hsl(240, 60%, 5%);
@@ -31,6 +31,7 @@ body {
   border-radius: 5px;
   background: var(--lightblue);
   box-shadow: 2px 2px 10px var(--black), inset -2px -2px 10px var(--lightblue);
+  position: relative;
 }
 
 .calculator__display {
@@ -57,7 +58,6 @@ body {
     font-size: calc(1rem * 1.5);
     height: 3.25rem;
     margin-left: 15px;
-    /* max-width: 14ch; */
     word-wrap: break-word;
     word-break: break-all;
   }
@@ -68,7 +68,24 @@ body {
   grid-template-columns: repeat(4, auto);
   grid-template-rows: repeat(6, 40px);
   gap: 0.5rem;
-  margin: 1.25rem 0.5rem 1.5rem;
+  margin: 2rem 0.5rem 1.5rem;
+  position: relative;
+}
+
+.info-icon {
+  background-image: url('./icon/info-square-svgrepo-com.png');
+  background-repeat: no-repeat;
+  width: 32px;
+  height: 32px;
+  display: block;
+  top: -41px;
+  left: -10px;
+  position: absolute;
+  opacity: 0.7;
+
+  &:hover + .info-description {
+    transform: scale(1, 1);
+  }
 }
 
 .button {
@@ -111,4 +128,21 @@ body {
 .active {
   opacity: 1;
   color: var(--red);
+}
+
+.info-description {
+  position: absolute;
+  width: 12.5rem;
+  top: -35px;
+  left: -322px;
+  border-radius: 5px;
+  background: var(--white);
+  color: var(--black);
+  padding: 0.5em;
+  font-size: 0.75rem;
+  box-shadow: 2px 2px 10px var(--black), inset -2px -2px 10px var(--lightblue);
+  transform: scale(0, 0);
+  transform-origin: top right;
+  z-index: -1;
+  transition: transform 1s 450ms ease-in-out;
 }
